# AstroHelper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
client/: .editorconfig  App.xaml  App.xaml.cs  AstroClient.csproj  AstroClient.sln  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  RootView.xaml  RootView.xaml.cs  app.manifest  package-lock.json  package.json
client/Interop/: AstroLib.cs
client/Models/: BluetoothDevice.cs  CameraConfig.cs  CameraDevice.cs
client/Properties/: launchSettings.json
client/ViewModels/: RootViewModel.cs
client/Views/: CameraControllerView.xaml  CameraControllerView.xaml.cs
client/public/: index.html
client/src/: App.tsx  index.css  index.js  theme.ts
client/src/pages/: CameraPage.tsx  NightPage.tsx
cmake/modules/: FindGphoto2.cmake
old-server/: server.py
server/: CMakeLists.txt  Cargo.toml  Cross.toml  build.ps1
server/src/: camera_controller.cpp  camera_controller.h  camera_controller.rs  data.rs  lib.rs  main.rs
server/src/backends/: http.cpp  http.h
src/: CameraController.cpp  CameraController.h  camera_controller.cpp  camera_controller.h  main.cpp
src/backends/: ble.h  http.cpp  http.h
