[package]
name = "astro"
version = "0.1.0"
edition = "2021"

[lib]
name = "astrolib"
crate-type = ["cdylib"] # Ensures Rust builds a DLL

[dependencies]
log = "0.4"
ble-peripheral-rust = "0.2"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
uuid = "1.12"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
lz4_flex = "0.11"

[target.aarch64-unknown-linux-gnu.dependencies]
gphoto2 = "3.3"
dbus = { version = "0.9", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
gphoto2 = "3.3"
dbus = { version = "0.9", features = ["vendored"] }
